<resources>
    <string name="app_name">foodify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="log_in_as_guest">LOG IN AS GUEST</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="username_required">Username is required</string>
    <string name="phone_number_required">Phone number is required</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_required">Password is required</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="confirm_password_required">Confirm password is required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="email_already_exists">This email is already registered.</string>
    <string name="reset_password">Reset Password</string>
    <string name="search_hint">Search ....</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>