<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".search.view.SearchFragment">

    <!-- Search Bar -->
    <AutoCompleteTextView
        android:id="@+id/searchAutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/search_hint"
        android:padding="10dp"
        android:completionHint="Search ...."
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_background"
        android:layout_margin="25dp"
        android:completionThreshold="1"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchAutoCompleteTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintWidth_default="wrap"
        app:selectionRequired="true"
        app:singleSelection="true">


        <com.google.android.material.chip.Chip
            android:id="@+id/categories"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/black"
            android:checked="true"
            android:textSize="18sp"
            app:closeIconSize="24dp"
            app:checkedIconTint="@color/white"
            app:closeIconTint="@color/white"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/area"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/area"
            app:chipBackgroundColor="@color/black"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ingredient"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ingredients"
            app:chipBackgroundColor="@color/black"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.chip.ChipGroup>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>