<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.ui.SignUpFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@id/imageGuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:focusable="false"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            android:minHeight="@dimen/text_input_layout_min_height"
            app:layout_constraintEnd_toEndOf="@id/editTextEndGuideLine"
            app:layout_constraintStart_toStartOf="@id/editTextStartGuideLine"
            app:layout_constraintTop_toBottomOf="@id/imageGuideLine">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_username"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:textColorHint="@color/material_on_surface_emphasis_medium"
                android:textIsSelectable="true"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="4dp"
            android:focusable="false"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            android:minHeight="@dimen/text_input_layout_min_height"
            app:layout_constraintEnd_toEndOf="@id/editTextEndGuideLine"
            app:layout_constraintStart_toStartOf="@id/editTextStartGuideLine"
            app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_phone_number"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:textColorHint="@color/material_on_surface_emphasis_medium"
                android:textIsSelectable="true"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="4dp"
            android:focusable="false"
            app:boxStrokeWidth="0dp"
            android:minHeight="@dimen/text_input_layout_min_height"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/editTextEndGuideLine"
            app:layout_constraintStart_toStartOf="@id/editTextStartGuideLine"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_email"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:textColorHint="@color/material_on_surface_emphasis_medium"
                android:textIsSelectable="true"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="4dp"
            android:focusable="false"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            android:minHeight="@dimen/text_input_layout_min_height"
            app:layout_constraintEnd_toEndOf="@id/editTextEndGuideLine"
            app:layout_constraintStart_toStartOf="@id/editTextStartGuideLine"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/password_ic"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:textColorHint="@color/material_on_surface_emphasis_medium"
                android:textIsSelectable="true"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="4dp"
            android:focusable="false"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            android:minHeight="@dimen/text_input_layout_min_height"
            app:layout_constraintEnd_toEndOf="@id/editTextEndGuideLine"
            app:layout_constraintStart_toStartOf="@id/editTextStartGuideLine"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/password_ic"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:textColorHint="@color/material_on_surface_emphasis_medium"
                android:textIsSelectable="true"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="4dp"
            android:focusable="true"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@id/editTextEndGuideLine"
            app:layout_constraintStart_toStartOf="@id/editTextStartGuideLine"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout" />

        <LinearLayout
            android:id="@+id/signupContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#FF757575"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/sign_in"
                android:textColor="@color/blue"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/imageGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/editTextStartGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/editTextEndGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>